# a2flow

./: .dockerignore  .gitignore  CLAUDE.md  DESIGN.md  README.md  compose.yml  lefthook.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  agent.py  alembic.ini  config.py  database.py  dependencies.py  exception_handlers.py  logging_context.py  main.py  pyproject.toml  session_service.py
backend/alembic/: env.py
backend/dependencies/: __init__.py  auth.py  authz.py  context.py  repository.py  service.py  singletons.py
backend/infrastructure/: __init__.py  agent.py  approval_tools.py  auth_tokens.py  bootstrap.py  database.py  locks.py  logging_context.py  mcp_client.py  mcp_registry_client.py  mcp_tools.py  migrations.py  password.py  planning_task_tools.py  secret_cipher.py  secret_resolver.py  session_service.py  skill_manager.py  summarizer.py  url_safety.py  vault_client.py  workflow_task_tools.py
backend/middleware/: envelope.py
backend/models/: __init__.py  agent_skill.py  approval.py  auth_session.py  base.py  constraints.py  impersonation_event.py  mcp_registry.py  mcp_server.py  message_meta.py  message_sender.py  notification.py  planning_session.py  response.py  secret.py  session.py  tenant.py  tenant_scoped.py  user.py  user_avatar.py  workflow.py  workflow_session.py  workflow_task.py  workflow_task_template.py
backend/repositories/: __init__.py  _integrity.py  agent_skill.py  approval.py  auth_session.py  exceptions.py  impersonation_event.py  mcp_server.py  message_meta.py  message_sender.py  notification.py  planning_session.py  query.py  secret.py  tenant.py  tenant_bootstrap.py  user.py  user_avatar.py  workflow.py  workflow_session.py  workflow_task.py  workflow_task_template.py
backend/routers/: __init__.py  agent.py  agent_skills.py  approvals.py  auth.py  exception_handlers.py  health.py  mcp_registry.py  mcp_servers.py  notifications.py  planning_sessions.py  secrets.py  sessions.py  tenant.py  user.py  workflow_sessions.py  workflow_task_templates.py  workflow_tasks.py  workflows.py
backend/scripts/: export_openapi.py
backend/services/: __init__.py  agent_skill.py  approval.py  (+17 more)
(+415 files in other folders)
