[project]
name = "a2flow"
version = "0.1.0"
description = "Google ADK agent with SSE streaming"
requires-python = ">=3.11"
dependencies = [
    "google-adk>=1.28.0",
    "anyio>=4.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-dotenv>=1.0.0",
    "litellm>=1.50.0",
    "ag-ui-protocol>=0.1.15",
    "ag-ui-adk>=0.6.0",
    "pydantic[email]>=2.0.0",
    "pydantic-settings>=2.13.0",
    "sqlmodel>=0.0.22",
    "aiosqlite>=0.20.0",
    "asyncpg>=0.30.0",
    "uuid-utils>=0.9.0",
    "dulwich>=1.2.1",
    "bcrypt>=5.0.0",
    "mcp>=1.27.0",
    "httpx>=0.27.0",
    "cryptography>=42.0.0",
    "python-multipart>=0.0.26",
    "alembic>=1.13.0",
]

[project.scripts]
start = "backend.main:app"

[tool.uv]
dev-dependencies = [
    "mypy>=1.20.2",
    "ruff>=0.9.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pyyaml>=6.0.0",
    "types-pyyaml>=6.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
# Alembic autogenerates these; they aren't hand-typed application code, and
# they have no __init__.py (adding one would risk shadowing the real
# installed `alembic` package once backend/ is on sys.path), so a dotted
# [[tool.mypy.overrides]] module pattern can't target them — exclude by path.
exclude = ["^alembic/versions/"]
